# home-assistant-build-cli

./: .gitignore  CLAUDE.md  README.md  SPEC.md  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: release.yml  test.yml
auth/: credentials.go  discovery.go  encryption.go  manager.go  oauth.go  server.go
client/: helper.go  output.go  rest.go  websocket.go
cmd/: action.go  action_call.go  action_data.go  action_docs.go  action_list.go  area.go  area_create.go  area_delete.go  area_get.go  area_list.go  area_update.go  auth.go  auth_discover.go  auth_login.go  auth_logout.go  auth_refresh.go  auth_status.go  automation.go  automation_action.go  automation_action_create.go  automation_action_delete.go  automation_action_get.go  automation_action_list.go  automation_action_update.go  automation_condition.go  automation_condition_create.go  automation_condition_delete.go  automation_condition_get.go  automation_condition_list.go  automation_condition_update.go  automation_create.go  automation_create_from_blueprint.go  automation_delete.go  automation_get.go  automation_list.go  automation_trace.go  automation_trigger.go  automation_trigger_create.go  automation_trigger_delete.go  automation_trigger_get.go  (+191 more)
config/: paths.go  settings.go
guide/: dashboard.md  embed.go
input/: parser.go
src/hab/: __init__.py  (+2 more)
test/: integration_test.go  run_integration_test.sh  test_automation.sh  test_calendar_todo.sh  test_core.sh  test_dashboard.sh  test_helpers.sh  test_misc.sh  test_registry.sh  test_script.sh  test_template.sh
tests/: __init__.py  conftest.py  test_cli_basic.py  test_config.py  test_credentials.py  test_input.py  test_output.py  test_rest_client.py
update/: update.go
(+35 files in other folders)
